dnl #############################################################
dnl #
dnl #  For information about autoconf, see:
dnl #
dnl #  http://www.gnu.org/software/autoconf/
dnl #
dnl #
dnl #############################################################


dnl ########################################
dnl #
dnl # Autoconf and automake initialization
dnl #
dnl ########################################
AC_INIT([jderobot],[5.0])
AC_CONFIG_AUX_DIR([config])
AC_CONFIG_HEADER([config.h])
dnl#init automake
AM_INIT_AUTOMAKE
dnl#config pkg-config
PKG_PROG_PKG_CONFIG
AM_PROG_CC_C_O
AC_PROG_LIBTOOL
AC_SUBST([LIBTOOL_DEPS])

dnl#init dirs
libdir='${exec_prefix}/lib/jderobot'
includedir='${prefix}/include/jderobot'

AC_SUBST([interfacedir],['${includedir}/slice'])
AC_SUBST([confdir],['${pkgdatadir}/conf'])



dnl ########################################
dnl #
dnl # command line options and precious variables
dnl #
dnl ########################################
dnl##### switches to enable/disable features

dnl##### precious variables
dnl # Allow user to define variables
AC_ARG_VAR([DOXYGEN],[command used to generate code documentation])
AC_ARG_VAR([SLICEDIR],[directory with ice distribution. If not supplied /usr/share/slice])


dnl ########################################
dnl #
dnl # compiler options
dnl #
dnl ########################################
dnl # set compiler flags
dnl # check gcc
AC_PROG_CC_C99

AC_PROG_CXX

dnl # check stdc headers
AC_HEADER_STDC

dnl ########################################
dnl #
dnl # core headers and libraries check
dnl #
dnl ########################################
dnl # check m
AC_CHECK_HEADERS([math.h])
AC_CHECK_LIB([m],[floor],
    [],
    AC_MSG_ERROR([m library not found]))

dnl # Check libraries and tools
m4_include([m4/libice.m4])
m4_include([m4/libgearbox.m4])
m4_include([m4/libopencv.m4])
m4_include([m4/libgtkmm.m4])
m4_include([m4/libgstreamer.m4])
m4_include([m4/lib1394.m4])
m4_include([m4/libgazebo.m4])
m4_include([m4/libplayer.m4])
m4_include([m4/libgtkglextmm.m4])
m4_include([m4/libopengl.m4])
m4_include([m4/libgsl.m4])
m4_include([m4/libfreenect.m4])

dnl # Check for built libraries dependencies
m4_include([m4/jderobotutil.m4])
m4_include([m4/jderobotice.m4])
m4_include([m4/colorspacesmm.m4])
m4_include([m4/bgfgsegmentation.m4])

dnl # Components checks
m4_include([m4/component_cameraserver.m4])
m4_include([m4/component_cameraview.m4])
m4_include([m4/component_cameraview_icestorm.m4])
m4_include([m4/component_recordingserver.m4])
m4_include([m4/component_opencvdemo.m4])
m4_include([m4/component_alarmgenerator.m4])
m4_include([m4/component_motiondetection.m4])
m4_include([m4/component_recorder.m4])
m4_include([m4/component_surveillance.m4])
m4_include([m4/component_gazeboserver.m4])
m4_include([m4/component_giraffeclient.m4])
m4_include([m4/component_introrob.m4])
m4_include([m4/component_bgfglab.m4])
m4_include([m4/component_teleoperator.m4])
m4_include([m4/component_calibrator.m4])
m4_include([m4/component_naooperator.m4])
m4_include([m4/component_jdenect.m4])
m4_include([m4/component_visornect.m4])
m4_include([m4/component_playerserver.m4])

dnl#AC_ARG_VAR([PYTHON_VERSION],[Python interpreter version])
dnl#AC_PYTHON_DEVEL
dnl#AC_PROG_SWIG
dnl#SWIG_PYTHON


dnl # Set variables
AC_SUBST([SLICESRCDIR],['$(top_srcdir)/src/interfaces/slice'])



dnl ########################################
dnl #
dnl # Generate output, main and core makefiles
dnl #
dnl ########################################
AC_CONFIG_FILES([Makefile \
    src/Makefile])

dnl# generate interfaces Makefiles
AC_CONFIG_FILES([src/interfaces/Makefile \
    src/interfaces/slice/Makefile \
    src/interfaces/slice/jderobot/Makefile \
    src/interfaces/cpp/Makefile \
    src/interfaces/cpp/jderobot/Makefile])

dnl # generate libs Makefiles
AC_CONFIG_FILES([src/libs/Makefile \
    src/libs/jderobotutil/Makefile \
    src/libs/jderobotice/Makefile \
    src/libs/colorspaces/Makefile \
    src/libs/colorspaces/test/Makefile \
    src/libs/colorspacesice/Makefile \
    src/libs/fuzzylib/Makefile \
    src/libs/pioneer/Makefile \
    src/libs/progeo/Makefile \
    src/libs/bgfgsegmentation/Makefile])

dnl # generate components Makefiles
AC_CONFIG_FILES([src/components/Makefile \
    src/components/cameraserver/Makefile \
    src/components/cameraview/Makefile \
    src/components/cameraview_icestorm/Makefile \
    src/components/opencvdemo/Makefile \
    src/components/recordingserver/Makefile \
    src/components/recorder/Makefile \
    src/components/surveillance/Makefile \
    src/components/alarmgenerator/Makefile \
    src/components/motiondetection/Makefile \
    src/components/gazeboserver/Makefile \
    src/components/giraffeclient/Makefile \
    src/components/teleoperator/Makefile \
    src/components/calibrator/Makefile \
    src/components/naooperator/Makefile \
    src/components/jdenect/Makefile \
    src/components/visornect/Makefile \
    src/components/introrob/Makefile \
    src/components/playerserver/Makefile \
    src/components/motiondetection/test/Makefile \
    src/components/bgfglab/Makefile])

AC_OUTPUT
