add_subdirectory (${CMAKE_CURRENT_SOURCE_DIR}/interfaces)
add_subdirectory (${CMAKE_CURRENT_SOURCE_DIR}/types)
add_subdirectory (${CMAKE_CURRENT_SOURCE_DIR}/libs)
add_subdirectory (${CMAKE_CURRENT_SOURCE_DIR}/tools)
add_subdirectory (${CMAKE_CURRENT_SOURCE_DIR}/drivers)
add_subdirectory (${CMAKE_CURRENT_SOURCE_DIR}/examples)
